# grokking_functional_programming

./: pyproject.toml
tests/section4/: test_4_10.py  test_4_30.py  test_4_4.py  test_4_9.py
